# py-starter

./: LICENSE  README.md  cookiecutter.json  requirements.txt
.github/workflows/: ci.yml
tests/: test_template_generation.py
{{ cookiecutter.__project_name_slug }}/: LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
{{ cookiecutter.__project_name_slug }}/src/{{ cookiecutter.python_package_name }}/: __init__.py  __version__.py
