[metadata]
name = {{ cookiecutter.python_package_name }}
version = file: src/{{ cookiecutter.python_package_name }}/VERSION
description = "{{ cookiecutter.project_fullname }}"
author = Piotr Gródek
author_email = grodekpiotr@gmail.com
license = Other/Proprietary License
license_files = LICENSE.md
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: Other/Proprietary License
  Natural Language :: English
  Operating System :: Independent
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Private :: Do Not Upload

[options]
package_dir=
  =src
packages=find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where=src

[bdist_wheel]
universal = 1
